--- a/index.html
+++ b/index.html
@@ -118,37 +118,37 @@
                   </thead>
                 <tbody>
                     <tr>
-                        <th scope="row"><input type="number" class="form-control" id="inEnteraPedido" value="0"></th>
+                        <th scope="row"><input type="number" class="form-control" id="inEnteraPedido"></th>
                         <td>Entera</td>
                         <td id="enteraPrecio"></td>
                         <td id="enteraTotal"></td>
                     </tr>
                     <tr>
-                        <th scope="row"><input type="number" class="form-control" id="inPorcionPedido" value="0"></th>
+                        <th scope="row"><input type="number" class="form-control" id="inPorcionPedido"></th>
                         <td>Porción</td>
                         <td id="porcionPrecio"></td>
                         <td id="porcionTotal"></td>
                     </tr>    
                     <tr>
-                        <th scope="row"><input type="number" class="form-control" id="inBudinPedido" value="0"></th>
+                        <th scope="row"><input type="number" class="form-control" id="inBudinPedido"></th>
                         <td>Budín</td>
                         <td id="budinPrecio"></td>
                         <td id="budinTotal"></td>
                     </tr>    
                     <tr>
-                        <th scope="row"><input type="number" class="form-control" id="inMigaPedido" value="0"></th>
+                        <th scope="row"><input type="number" class="form-control" id="inMigaPedido"></th>
                         <td>Miga</td>
                         <td id="migaPrecio"></td>
                         <td id="migaTotal"></td>
                     </tr>    
                     <tr>
-                        <th scope="row"><input type="number" class="form-control" id="inPebetinPedido" value="0"></th>
+                        <th scope="row"><input type="number" class="form-control" id="inPebetinPedido"></th>
                         <td>Pebetín</td>
                         <td id="pebetinPrecio"></td>
                         <td id="pebetinTotal"></td>
                     </tr>    
                     <tr>
-                        <th scope="row"><input type="number" class="form-control" id="inPebetePedido" value="0"></th>
+                        <th scope="row"><input type="number" class="form-control" id="inPebetePedido"></th>
                         <td>Pebete</td>
                         <td id="pebetePrecio"></td>
                         <td id="pebeteTotal"></td>
